# asimov-imap-module

./: CHANGES.md  Cargo.toml  README.md
.asimov/: module.yaml
.github/workflows/: release.yaml
etc/: catalog.sh  install.cast  install.sh  list-json.cast  list-json.sh  list.cast
src/: capabilities.rs  config.rs  cursor.rs  error.rs  iterator.rs  lib.rs  local_cursor.rs  message.rs  options.rs  reader.rs  remote_cursor.rs  url.rs
src/cataloger/: main.rs
src/fetcher/: main.rs
