# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-imap-module"
version = "0.0.0"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module for IMAP email import."
#documentation = "https://docs.rs/asimov-imap-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-imap-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = ["command-line-utilities", "text-processing"]          # TODO
publish = true

[features]
default = ["all", "cli", "std"]
all = ["netrc", "tls", "tracing"]
cli = ["asimov-module/cli", "dogma/clap", "std", "dep:clap", "dep:clientele"]
std = ["asimov-module/std", "dogma/std"]
tracing = ["asimov-module/tracing", "clientele?/tracing"]
unstable = []

# Optional features:
netrc = ["dep:rust-netrc"]
tls = []

[dependencies]
asimov-module = { version = "25.0.0-dev.13", default-features = false }
clap = { version = "4.5", default-features = false, features = [
    "std",
], optional = true }
clientele = { version = "0.3.8", default-features = false, features = [
    "clap",
    "std",
], optional = true }
dogma = { version = "0.1.11", default-features = false, features = ["all"] }
imap = { version = "3.0.0-alpha.15", default-features = false, features = [
    "rustls-tls",
] }
imap-proto = { version = "0.16", default-features = false }
know = { version = "0.1.4", features = ["imap-proto", "mail-parser"] }
mail-parser = "0.11"
rust-netrc = { version = "0.1", optional = true }
rustls = { version = "0.22", default-features = false, features = [
    "aws_lc_rs",
] }
secrecy = "0.10"

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-imap-cataloger"
path = "src/cataloger/main.rs"
required-features = ["cli"]

[[bin]]
name = "asimov-imap-fetcher"
path = "src/fetcher/main.rs"
required-features = ["cli"]
