# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-imap-module"
version = "0.1.5"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module for IMAP email import."
#documentation = "https://docs.rs/asimov-imap-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-imap-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = ["command-line-utilities", "text-processing"]          # TODO
publish = true

[features]
default = ["all", "cli", "std"]
all = ["netrc", "pretty", "tls", "tracing"]
cli = ["asimov-module/cli", "dogma/clap", "std", "dep:clap", "dep:clientele"]
std = ["asimov-module/std", "dogma/std"]
unstable = []

# Optional features:
netrc = ["dep:rust-netrc"]
pretty = ["know/pretty", "dep:colored_json"]
tls = []
tracing = ["asimov-module/tracing", "clientele?/tracing"]

[dependencies]
asimov-module = { version = "25.0.0-dev.14", default-features = false }
dogma = { version = "0.1.11", default-features = false, features = ["all"] }
imap = { version = "3.0.0-alpha.15", default-features = false, features = [
    "rustls-tls",
] }
imap-proto = { version = "0.16", default-features = false }
jiff = { version = "0.2", default-features = false }
know = { version = "0.2.6", features = ["imap-proto", "mail-parser", "serde"] }
mail-parser = "0.11"
percent-encoding = { version = "2.3", default-features = false }
rfc2047-decoder = { version = "1.0", default-features = false }
rustls = { version = "0.22", default-features = false, features = [
    "aws_lc_rs",
] }
secrecy = "0.10"

# Optional integrations:
clap = { version = "4.5", default-features = false, features = [
    "std",
], optional = true }
clientele = { version = "0.3.8", default-features = false, features = [
    "clap",
    "getenv",
    "std",
], optional = true }
colored_json = { version = "5", default-features = false, optional = true }
rust-netrc = { version = "0.1", optional = true }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-imap-cataloger"
path = "src/cataloger/main.rs"
required-features = ["cli"]

[[bin]]
name = "asimov-imap-fetcher"
path = "src/fetcher/main.rs"
required-features = ["cli"]
